--- a/content/posts/2020/rhvh-ovirt.adoc
+++ b/content/posts/2020/rhvh-ovirt.adoc
@@ -9,12 +9,12 @@ slug: rhvh-ovirt
 
 == RHVH Ovirt
 
-I'm not an infra dedicated person.  So I don't have a ton of experience in using multipath. But Red Hat documentation is pretty thorough on the subject.footnote:[https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/dm_multipath/ignore_localdisk_procedure]footnote:[https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/dm_multipath/config_file_defaults]
+Red Hat documentation is pretty thorough on the subject of multipath, which is a lovely failover mechanism for connections between remote volumes provided by SANs and the host.footnote:[https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/dm_multipath/ignore_localdisk_procedure]footnote:[https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/dm_multipath/config_file_defaults]
 
 There is even this KCS that discusses the matter a little more: https://access.redhat.com/solutions/66569[Internal disk device is being detected as multipath device]
 
 
-In setting up my bare metal servers for RHVH, after adding all my disks to the system as basically single RAID 0 disks, I found that the base image for RHVH had particular settings for creating a single path multipath entry for these.  I guess I could have just used the multipath device names and created filesystems from those, but it seems a bit odd to me.  Reading around in the docs suggests that if you have one path you shouldn't use multipath at all, which kinda seems obvious.  I suppose I ended up in this situation because it is not normal to set up all your disks as RAID 0, but I made this choice with the knowledge that I'll be using a cloud replication strategy, and these are all local disks anyways. As you can see, my root filesystem is on another disk as well.  If these fail and this host fails, I have other systems available.  This is also my home lab and I don't care about rebuild/down time if one of these disks goes out.
+In setting up my bare metal servers for RHVH, after adding all my disks to the system as basically single RAID 0 disks, I found that the base image for RHVH had particular settings for creating a single path multipath entry for these.  I guess I could have just used the multipath device names and created filesystems from those, but it seems a bit odd to me.  Reading around in the docs suggests that if you have one path you shouldn't use multipath at all, which kinda seems obvious.  I'll be using a cloud replication strategy, so local disks in RAID 0 seems sufficient for this use case. As you can see, my root filesystem is on another disk as well.  If these fail and this host fails, I have other systems available.  This is also my home lab and I don't care about rebuild/down time if one of these disks goes out.
 
 So how do we fix this?
 
