--- a/content/posts/2019/rsync-tips.adoc
+++ b/content/posts/2019/rsync-tips.adoc
@@ -1,7 +1,7 @@
 ---
 title: Rsync Tips
 date: 2019-12-09
-categories: ["rysnc"]
+categories: ["rsync"]
 tags: ["tips"]
 language: en
 slug: rsync-tips
