Container Systemd service and some edits.

--- a/content/posts/2020/bash-tips.adoc
+++ b/content/posts/2020/bash-tips.adoc
@@ -32,3 +32,9 @@ Otherise this works fine:
 Or 
 
  $ docker rmi $(docker images -a -q)
+
+Remove exited containers:
+
+ $ docker rm $(docker ps -a -f status=exited -q)
+
+ $ docker system prune -a
