--- a/content/posts/2020/rhvh-ovirt.adoc
+++ b/content/posts/2020/rhvh-ovirt.adoc
@@ -190,3 +190,10 @@ sdg                                                        8:96   1 59.6G  0 dis
 [root@host-a ~]# 
 
 ----
+
+=== Notes 
+
+Location of gluster install logs when installing RHV ovirt engine from the GUI:
+
+ -rw-r--r--. 1 root root 26K Jan 18 15:03 /var/log/cockpit/ovirt-dashboard/gluster-deployment.log
+
