--- a/content/posts/2020/running-secure-containers-on-fedora.adoc
+++ b/content/posts/2020/running-secure-containers-on-fedora.adoc
@@ -75,7 +75,7 @@ Since my user was created by IdM (free-ipa), I needed to add these values manual
 
 
  $ sudo echo "bward:100000:65536" >> /etc/subuid
- $ sudo echo "bward:100000:65536" >> /etc/subuid
+ $ sudo echo "bward:100000:65536" >> /etc/subgid
 
 Now I can pull the image correctly.
 
