--- a/content/posts/2021/image-video-metadata.adoc
+++ b/content/posts/2021/image-video-metadata.adoc
@@ -9,7 +9,7 @@ slug: image-video-metadata-p2
 
 == Image Video Metadata Tips
 
-Recently I found a bunch of photos that had the wrong capture date, a result of the device not having the correct date when the photos were captured.  This is pretty annoying, but can be fixed with a nice perl utility called `exiftool`.  Apple and a bunch of other photo tools these days use these dates for sorting your photos.  So if something isn't right, it can be pretty confusing/noticeable. 
+Recently I found a bunch of photos that had the wrong capture date, a result of the device not having the correct date when the photos were captured.  This is pretty annoying, but can be fixed with a nice perl utility called https://exiftool.org/[`exiftool`].  Apple and a bunch of other photo tools these days use these dates for sorting your photos.  So if something isn't right, it can be pretty confusing/noticeable. 
 
 Dates before running the script:
 
