Many updates and rework.

--- a/content/posts/2021/keycloak-oauth2-proxy.adoc
+++ b/content/posts/2021/keycloak-oauth2-proxy.adoc
@@ -4,7 +4,7 @@ date: 2021-04-15
 categories: ["containers","linux"]
 tags: ["sso","security","proxy"]
 language: en
-slug: scc
+slug: keycloak-oauth2-proxy
 ---
 
 == Keycloak and oauth2-proxy
