--- a/content/posts/2019/openshift-prometheus-external-heketi.adoc
+++ b/content/posts/2019/openshift-prometheus-external-heketi.adoc
@@ -88,7 +88,7 @@ spec:
   endpoints:
   - interval: 30s
     port: metrics
-    honorLables: true
+    honorLabels: true
   namespaceSelector:
     matchNames:
     - openshift-monitoring 
