--- a/content/posts/2022/openshift-automation-examples.adoc
+++ b/content/posts/2022/openshift-automation-examples.adoc
@@ -1,5 +1,5 @@
 ---
-title: OpenShift Automtion Examples
+title: OpenShift Automation Examples
 date: 2022-04-15
 categories: ["kubernetes","openshift"]
 tags: ["automation"]
@@ -7,7 +7,7 @@ language: en
 slug: openshift-automation-examples
 ---
 
-== OpenShift Automtion Examples
+== OpenShift Automation Examples
 
 
 - https://github.com/sa-ne/openshift4-rhv-upi
